--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "i18next": "^23.2.11",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-flagkit": "^2.0.4",
+    "react-i18next": "^13.0.2",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3"
   }
