--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.0.7",
     "autoprefixer": "10.4.14",
     "i18next": "^23.2.11",
     "i18next-browser-languagedetector": "^7.1.0",
