--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i18next": "^23.4.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
+    "million": "^2.5.11",
     "next": "13.4.12",
     "nextjs-toploader": "^1.4.2",
     "postcss": "8.4.27",
