--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.0.7",
+    "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "i18next": "^23.4.1",
     "i18next-browser-languagedetector": "^7.1.0",
